--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,39 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
- <%= render 'layouts/shim' %>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <%= render 'layouts/shim' %>
+ 
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
 </head>
+
 <body>
-<%= render 'layouts/header' %>
-<%= yield %>
+  <%= render 'layouts/header' %>
+  <div class = "background-container" id="backdrop">            
+    <div class="container">
+      <div class="row-fluid"> 
+        <div class="span4">
+          <div class="text-box" id="connect-bar">
+            <%= render 'layouts/connect' %>
+          </div>  
+        </div>  
+        <div class="span8" id="page-info">           
+          <div class="text-box">
+            <%= yield %>
+          </div>  
+        </div> <!--end of span8-->
+      </div>  
+    </div>
+    <%= render 'layouts/footer' %>
+  </div>     
 
 </body>
 </html>
