--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
-<div class = "navbar navbar-fixed-top">
+
+<div class = "navbar fixed-top">
 	<div class = "navbar-inner">
 		<div class="container">
 			<!--btn-navbar used as toggle for collapsed navbar -->
@@ -8,17 +9,17 @@
         <span class="icon-bar"></span>
       </a>
       <!-- Logo -->  
-      <a class="brand" href="#">Paseo</a> 
+      <a class="brand" href= "/" ><%=image_tag("", alt: "Logo")%></a> 
       <!-- Everything to be hidden at 940px or less -->
       <div class="nav-collapse collapse">
         <ul class = "nav">
-        	<li><%= link_to "Home", root_path %></li>
-        	<li><%= link_to "About", about_path %></li>
-        	<li><%= link_to "Menu", menu_path %></li>
-        	<li><%= link_to "Press", press_path %></li>
-        	<li><%= link_to "Contact", contact_path %></li>
+          <li><%= link_to "Home", root_path, class:"menu-link"%></li>
+          <li><%= link_to "About", about_path, class:"menu-link" %></li>
+          <li><%= link_to "Menu", menu_path, class:"menu-link" %></li>
+          <li><%= link_to "News", news_path, class:"menu-link" %></li>
+          <li><%= link_to "Contact", contact_path, class:"menu-link"%></li>
         </ul>	
       </div>
-    </div>
+    </div> <!-- end of container-->
   </div>    
 </div>      
