--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 
 @import "bootstrap";
+@import "bootstrap-responsive";
 
 /* Universal */
 html, body {
@@ -117,7 +118,7 @@ a.menu-link{
 }
 
 
-@import "bootstrap-responsive-2.3.2";
+
 
 
 
