--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,16 +1,15 @@
 @import "bootstrap";
-@import "bootstrap-responsive-2.3.2";
+@import "bootstrap-responsive";
 
 /* Universal */
 html, body {
   background-color: #D68CA3;
   min-height: 100%;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .background-container {
-  min-height: 100%;
-  position: relative;
-  padding-bottom: 100px;
 }
 
 #backdrop {
