--- a/app/views/layouts/_connect.html.erb
+++ b/app/views/layouts/_connect.html.erb
@@ -1,4 +1,7 @@
 
         <ul>
           <li><div class="fb-like" data-href="https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077?fref=ts" data-send="false" data-layout="button_count" data-width="90" data-show-faces="false" data-font="lucida grande"></div>
-          </li>  
+          </li>
+          <li><%=link_to image_tag("fbicon.png"), "https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077", target:"_blank"%>  
+		  </li>        
+        </ul>  
