--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,17 +1,17 @@
 @import "bootstrap";
-@import "bootstrap-responsive";
+
 
 /* Universal */
-html, body {
+body {
   background-color: #D68CA3;
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-top: 40px;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
 
 .background-container {
     margin: 0;
     position: relative;
-    
 }
 
 #backdrop {
@@ -25,20 +25,21 @@ html, body, .main-page, .row-fluid, .background-container {
   height: 100% !important;
 }
 
-
-
 .text-box{
   text-align: left;
   background-color:#ffffff;
   opacity:0.9; 
-  padding: 30px;
-  margin-top: 10px;
-  
+  padding: 20px;
+  margin-top: 10px;  
   /*border-style: solid;
   border-width: 7px;
   border-color: #0fe9f7;
   border-radius: 5px;
   */
+}
+
+.row-fluid [class*="span"] {
+    float: left !important; //Allows boxes to stack properly
 }
 
 .center {
@@ -89,7 +90,13 @@ ul {
     }
   }
 
-a.menu-link{
+.menu-link  {
+  text-align: center;
+  line-height: 30px;
+  margin-left: 10px
+}
+
+a.menu-link  {
       color: white !important;
       &:hover {
          color: #660000 !important;
@@ -117,11 +124,22 @@ a.menu-link{
   background-color: #D68CA3; 
   background-image: none;
   font-size: 120%;
+  border-color: white;
+  border-width: 7px;
 }
 
 .navbar {
-  margin-bottom: 0px;
+  margin-bottom: 0px !important;
 }
+
+.navbar-fixed-top  {
+  margin-left: 0px !important;  //Ensures navbar fits upon resize
+  margin-right: 0px !important;
+}
+
+
+@import "bootstrap-responsive";
+
 
 
 
