--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 
-<div class = "navbar fixed-top">
+<div class = "navbar navbar-fixed-top">
 	<div class = "navbar-inner">
 		<div class="container">
 			<!--btn-navbar used as toggle for collapsed navbar -->
