Connect layout update

--- a/app/views/layouts/_connect.html.erb
+++ b/app/views/layouts/_connect.html.erb
@@ -1,7 +1,7 @@
-
-        <ul>
-          <li><div class="fb-like" data-href="https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077?fref=ts" data-send="false" data-layout="button_count" data-width="90" data-show-faces="false" data-font="lucida grande"></div>
+		<h2 id="connect-title">Connect With Us!<h2>
+        <ul class="connect-bar">
+          <li><%=link_to image_tag("yelp75.jpg", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>
           </li>
-          <li><%=link_to image_tag("fbicon.png"), "https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077", target:"_blank"%>  
+          <li><%=link_to image_tag("fbicon72.png", class:"icon"), "https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077"%> 
 		  </li>        
         </ul>  
