--- a/might_need.css
+++ b/might_need.css
@@ -19,3 +19,5 @@ border-style: solid;
 #myCarousel {
   padding-top: 40px;
 }
+
+<div class="fb-like" data-href="https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077?fref=ts" data-send="false" data-layout="button_count" data-width="90" data-show-faces="false" data-font="lucida grande"></div>
