--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,11 +30,12 @@ html, body, .main-page, .row-fluid, .background-container {
   background-color:#ffffff;
   opacity:0.9; 
   padding: 20px;
-  margin-top: 10px;  
+  margin-top: 10px;
+  border-radius: 5px;  
   /*border-style: solid;
   border-width: 7px;
   border-color: #0fe9f7;
-  border-radius: 5px;
+  
   */
 }
 
@@ -56,8 +57,6 @@ html, body, .main-page, .row-fluid, .background-container {
 h2{
   text-align: center;
   font-size: 2em;
-
-
 }
 
 .footer {
@@ -67,8 +66,19 @@ h2{
     position: fixed;
     left: 0;
     bottom: 0;    
-    
 }
+
+footer.footer li{
+  margin-left: 10px;
+}
+
+img.icon{
+  margin:10px; 
+  &:hover {
+    opacity: 1.0 !important;
+  }
+}
+
 
 
 /* Typography */
