--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,10 +27,7 @@
         <div class="span4 text-box">
             <%= render 'layouts/connect' %>
         </div>  
-        <div class="span8 text-box">           
-          
-            <%= yield %>
-          
+        <div class="span8 text-box" id="content">       <%= yield %>
         </div> <!--end of span8-->
       </div>  
     </div>
