--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -45,8 +45,7 @@ Succulent morsels of roasted pork nestled atop sweet banana peppers, draped with
 <p>
 Ham and Cheese $7.50
 Our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered with caramelized onions, & Swiss cheese, melted together on a hot press. (No lettuce or jalapeños)
-Onion Obsession Sandwich $6.00
-Caramelized onions sautéed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeño peppers. (Optional spice 1-5 stars)
+Onion Obsession Sandwich $6.00 Caramelized onions sautéed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeño peppers. (Optional spice 1-5 stars)
 </p>
 Havana Seared Scallops $8.95
 Sizable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro. (Optional spice 1-5 stars)
