--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -2,35 +2,35 @@
 	<h1 class="page-title">Menu</h1>
 
 	<h2 class="title">Sandwiches</h2>
-	<div class="menu-description">All sandwiches are on a lightly toasted baguetter slather w/aoli, fresh cilantro, pickled jalapenos, crisp romaine &amp caramelized onions.
+	<div class="menu-description">All sandwiches are on a lightly toasted baguetter slather w/aoli, fresh cilantro, pickled jalapenos, crisp romaine &amp; caramelized onions.
 	</div> 
 
 	1. Grilled Pork $8.50
-	cubed pork loin grilled over lava rocks & basted w/*paseo marinade until golden brown
+	cubed pork loin grilled over lava rocks &amp; basted w/*paseo marinade until golden brown
 
 	2.  Caribbean Roast $8.50
-	pork shoulder coated in *paseo marinade & slow roasted 'til falling into succulent morsels
+	pork shoulder coated in *paseo marinade &amp; slow roasted 'til falling into succulent morsels
 
 	3. Chicken Breast $8.50
-	plump chicken breast dredged in *paseo marinade & fire grilled to perfection.
+	plump chicken breast dredged in *paseo marinade &amp; fire grilled to perfection.
 
 	4. Smokin' Thighs $8.50
-	2 marinated, skin-on, boneless chicken thighs flash grilled & oven roasted
+	2 marinated, skin-on, boneless chicken thighs flash grilled &amp; oven roasted
 
 	5. Sauteed Prawns $8.95
 	6 black tiger prawns sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
 
 	6. Fish of the Day $8.95
-	delectable slices of fish, pan seared thoroughly w/ extra virgin olive oil & garlic tapenade (optional spice 1-5 stars)
+	delectable slices of fish, pan seared thoroughly w/ extra virgin olive oil &amp; garlic tapenade (optional spice 1-5 stars)
 
 	7. Tofu Delight $8.50
-	where's the meat!? who cares, extra firm organic tofu cut into bite size pieces & sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
+	where's the meat!? who cares, extra firm organic tofu cut into bite size pieces &amp; sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
 
 	8. Paseo Press $8.95
 	succulent morsels of roasted pork nestled atop banana peppers draped w/ sheer slices of smoked ham, swiss cheese, caramelized onions all melted together between a hot press (no lettauce or jalapenos) 
 
 	9. Ham and Cheese $7.50
-	our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered w/ caramelized onions & swiss cheese, melted together on a hot press (no lettauce or jalapenos)
+	our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered w/ caramelized onions &amp; swiss cheese, melted together on a hot press (no lettauce or jalapenos)
 
 	10. Onion Obsession $6.00
 	caramelized onions sauteed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeno peppers (optional spice 1-5 stars)
@@ -40,26 +40,26 @@
 
 	<h2>The Goods</h2>
 	12. West Caribbean Bowl $12.00
-	dis one be the second most popular "bowl" in the caribbean mon! a generous portion of jasmine rice smothered in black beans, warm salsa, shredded cheddar cheese, sour cream, jalapenos & 1 chicken thigh. served w/ love, peace, and tortilla chips
+	dis one be the second most popular "bowl" in the caribbean mon! a generous portion of jasmine rice smothered in black beans, warm salsa, shredded cheddar cheese, sour cream, jalapenos &amp; 1 chicken thigh. served w/ love, peace, and tortilla chips
 
 	13. Rice Bean Thigh Trio $8.00
-	two scoops of jasmine rice covered in black beans & accompanied w/ an oven roasted thigh *extra thigh $2.00
+	two scoops of jasmine rice covered in black beans &amp; accompanied w/ an oven roasted thigh *extra thigh $2.00
 
 	14. Paseo Greens $4.75
-	crisp romaine lettauce, razor thin sliced purple cabbage, julienne pickled beets, fresh sprigs of cilantro, drizzled w/ our house vinaigrette & extra virgin oil *add grilled chicken breast--$3.00 *add sauteed prawns, scallops or fish--$4.00
-	*roasted thigh & caribbean roast--$2.00
+	crisp romaine lettauce, razor thin sliced purple cabbage, julienne pickled beets, fresh sprigs of cilantro, drizzled w/ our house vinaigrette &amp; extra virgin oil *add grilled chicken breast--$3.00 *add sauteed prawns, scallops or fish--$4.00
+	*roasted thigh &amp; caribbean roast--$2.00
 
-	15. Black Beans & Rice $5.50
+	15. Black Beans &amp; Rice $5.50
 	a bowl full of fluffy jasmine rice smothered in our critically acclaimed vegetarian black beans
 
 	16. Rice Bean Salad $8.25
-	paseo greens served with jasmine rice & a healthy portion of black beans
+	paseo greens served with jasmine rice &amp; a healthy portion of black beans
 
 	<h2>Entrees</h2>
-	<div class="menu-description">served all day w/ the following paseo greens drizzled with our house vinaigrette & extra virgin olive oil. accompied w/ jasmine rice & our critically acclaimed vegetarian black beans. </div>
+	<div class="menu-description">served all day w/ the following paseo greens drizzled with our house vinaigrette &amp; extra virgin olive oil. accompied w/ jasmine rice &amp; our critically acclaimed vegetarian black beans. </div>
 
 	17. 1/2 Chicken Dinner $12.50
-	by far the best deal on the island for quality & quantity. a huge 1/2 chicken encrusted w/ exotic spiced, flash grilled sealing all the juiced, finished off in the oven & then by you.
+	by far the best deal on the island for quality &amp; quantity. a huge 1/2 chicken encrusted w/ exotic spiced, flash grilled sealing all the juiced, finished off in the oven &amp; then by you.
 
 	18. Caribbean Roast Dinner $12.50
 	hefty morsels of succulent roasted pork shoulder dripping in *paseo parinade waiting to tantalize al 9000 of your taste buds
@@ -71,19 +71,19 @@
 	6oz of boneless, skinless, all white goodness, grilled over lava rocks with a caramelized coating of *paseo marinade embracing all its' natural juices
 
 	21. Paseo Pork Loin $13.00
-	cubed pork loin grilled over an open flame, brushed with *paseo marinade & greatness.
+	cubed pork loin grilled over an open flame, brushed with *paseo marinade &amp; greatness.
 
 	22. Caribbean Scallops $13.00
-	savory sea scallops pan seared in extra virgin olive oil, garlic tapenade & gently tossed in our reveled red sauce. Available w/ cilantro (optional spice 1-5 stars)
+	savory sea scallops pan seared in extra virgin olive oil, garlic tapenade &amp; gently tossed in our reveled red sauce. Available w/ cilantro (optional spice 1-5 stars)
 
 	23. Fish In Red Sauce $13.00
-	delicate slices of fish fillet sauteed in extra virgin olive oil, garlic tapenade & swimming in our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
+	delicate slices of fish fillet sauteed in extra virgin olive oil, garlic tapenade &amp; swimming in our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
 
 	24. Paseo Prawns $13.00
-	6 peeled & deveined black tiget prawns, sauteed in extra virgin olive oil, garlic tapenade & simmered in our vivrant red sauce. available w/ cilantro (optional spice 1-5 stars)
+	6 peeled &amp; deveined black tiget prawns, sauteed in extra virgin olive oil, garlic tapenade &amp; simmered in our vivrant red sauce. available w/ cilantro (optional spice 1-5 stars)
 
 	25. Tofu Con Gusto $12.50
-	stout slices of extra firm organic tofu, sauteed in extra virgin olive oil, garlic tapenade & ladled w/ our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
+	stout slices of extra firm organic tofu, sauteed in extra virgin olive oil, garlic tapenade &amp; ladled w/ our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
 
 	<h2>Sides</h2>
 	grilled chicken breast w/ rice  $5.75
