Spacing updated between textbox elements in the fluid row

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,10 @@
   <div class = "container" id="backdrop">  
     <div class="container main-page">
       <div class="row-fluid"> 
-        <div class="span9 text-box center" id="content">       
+        <div class="span9 text-box" id="content">       
           <%= yield %>
         </div> <!--end of span8-->
-        <div class="span3 text-box">
+        <div class="span3 text-box connect-bar">
           <%= render 'layouts/connect' %>
         </div>  
     </div>
