formatting menu titles

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -103,6 +103,25 @@ h3{
   margin: 0px auto 10px auto;
 }
 
+.menu-category  {
+  border-bottom: solid;
+  border-bottom-width: 2px;
+  padding-bottom:5px;
+}
+
+.food-title  {
+  
+  font-size: 1.8em;
+  font-weight:bold;
+  margin-right: 5px;
+}
+
+.description  {
+  font-size: 1.0em;
+}
+
+
+
 /* Header */
 ul {
     float: left;
