--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, 'Menu') %>
 	<h1 class="page-title">Menu</h1>
 
-	<h2 class="title">Sandwiches</h2>
-	<div class="menu-description">All sandwiches are on a lightly toasted baguetter slather w/aoli, fresh cilantro, pickled jalapenos, crisp romaine &amp; caramelized onions.
+	<div class="menu-category">
+	<span class="food-title">Sandwiches</span><span class="description">
+	<br><em>All sandwiches are on a lightly toasted baguette slathered with aoli, fresh cilantro, pickled jalapenos, crisp romaine &amp; caramelized onions.</em></span>
 	</div> 
 
 	1. Grilled Pork $8.50
@@ -38,7 +39,7 @@
 	11. Seared Scallops $8.95
 	sizeable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro (optional spice 1-5 stars)
 
-	<h2>The Goods</h2>
+	<div class="menu-category"><span class="food-title">The Goods</span></div>
 	12. West Caribbean Bowl $12.00
 	dis one be the second most popular "bowl" in the caribbean mon! a generous portion of jasmine rice smothered in black beans, warm salsa, shredded cheddar cheese, sour cream, jalapenos &amp; 1 chicken thigh. served w/ love, peace, and tortilla chips
 
@@ -55,8 +56,11 @@
 	16. Rice Bean Salad $8.25
 	paseo greens served with jasmine rice &amp; a healthy portion of black beans
 
-	<h2>Entrees</h2>
-	<div class="menu-description">served all day w/ the following paseo greens drizzled with our house vinaigrette &amp; extra virgin olive oil. accompied w/ jasmine rice &amp; our critically acclaimed vegetarian black beans. </div>
+
+	<div class="menu-category">
+	<span class="food-title">Entrees</span>
+		<span class="description"><br><em>served all day w/ the following paseo greens drizzled with our house vinaigrette &amp; extra virgin olive oil. accompied w/ jasmine rice &amp; our critically acclaimed vegetarian black beans.</em><span>
+	</div>	
 
 	17. 1/2 Chicken Dinner $12.50
 	by far the best deal on the island for quality &amp; quantity. a huge 1/2 chicken encrusted w/ exotic spiced, flash grilled sealing all the juiced, finished off in the oven &amp; then by you.
@@ -85,7 +89,7 @@
 	25. Tofu Con Gusto $12.50
 	stout slices of extra firm organic tofu, sauteed in extra virgin olive oil, garlic tapenade &amp; ladled w/ our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
 
-	<h2>Sides</h2>
+	<h2 class="food-title">Sides</h2>
 	grilled chicken breast w/ rice  $5.75
 	paseo porn loin w/ rice $5.75
 	2 chicken thighs w/ rice $5.25
