formatted menu in progress

--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,43 +1,95 @@
 <% provide(:title, 'Menu') %>
-	<h1 class="page-title">Menu</h1>
+<h1 class="page-title">Menu</h1>
 
-	<div class="menu-category">
-	<span class="food-title">Sandwiches</span><span class="description">
-	<br><em>All sandwiches are on a lightly toasted baguette slathered with aoli, fresh cilantro, pickled jalapenos, crisp romaine &amp; caramelized onions.</em></span>
+<div class="row-fluid">
+	<div class="menu-category span12">
+		<span class="food-title">Sandwiches</span><span class="description">
+	    <br><em>All sandwiches are on a lightly toasted baguette slathered with aoli, fresh cilantro, pickled jalapenos, crisp romaine &amp; caramelized onions.</em></span>
 	</div> 
 
-	1. Grilled Pork $8.50
-	cubed pork loin grilled over lava rocks &amp; basted w/*paseo marinade until golden brown
+	<div class="span12">
+		<ul class="list-2s">
+		  <li>
+		    <div class="span6 menu-row">
+		    1. Grilled Pork $8.50
+			cubed pork loin grilled over lava rocks &amp; basted w/*paseo marinade until golden brown
+			</div>
+			<div class="span6 menu-row">
+			2.  Caribbean Roast $8.50
+			pork shoulder coated in *paseo marinade &amp; slow roasted 'til falling into succulent morsels
+			</div>
+		  </li>	
+		  <li>
+		  	<div class="span6 menu-row">
+		  	  3. Chicken Breast $8.50
+              plump chicken breast dredged in paseo marinade &amp; fire grilled to perfection
+		  	</div>
+		  	<div class="span6 menu-row">
+			  4. Smokin' Thighs $8.50
+			  2 marinated, skin-on, boneless chicken thighs flash grilled &amp; oven roasted
+		  	</div>	
+		  </li>
+		  <li>
+		  	<div class="span6 menu-row">
+			  5. Sauteed Prawns $8.95
+			  6 black tiger prawns sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
+		  	</div>
+		  	<div class="span6 menu-row">
+              6. Fish of the Day $8.95
+	          delectable slices of fish, pan seared thoroughly w/ extra virgin olive oil &amp; garlic tapenade (optional spice 1-5 stars)
+		  	</div>	
+		  </li>
+		  <li>
+		  	<div class="span6 menu-row">
+		  	  7. Tofu Delight $8.50
+	          where's the meat!? who cares, extra firm organic tofu cut into bite size pieces &amp; sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars) 
+		  	</div>
+		  	<div class="span6 menu-row">
+		  	  8. Paseo Press $8.95
+	          succulent morsels of roasted pork nestled atop banana peppers draped w/ sheer slices of smoked ham, swiss cheese, caramelized onions all melted together between a hot press (no lettauce or jalapenos) 
+		  	</div>	
+		  </li>
+		  <li>
+		  	<div class="span6 menu-row">
+		  	  9. Ham and Cheese $7.50
+	          our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered w/ caramelized onions &amp; swiss cheese, melted together on a hot press (no lettauce or jalapenos)
+		  	</div>
+		  	<div class="span6 menu-row">
+              10. Onion Obsession $6.00
+	          caramelized onions sauteed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeno peppers (optional spice 1-5 stars)
+		  	</div>	
+		  </li>
+		  <li>
+		  	<div class="span6 menu-row">
+		  	  11. Seared Scallops $8.95
+	          sizeable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro (optional spice 1-5 stars)
+		  	</div>
+		  	<div class="span6 menu-row">
 
-	2.  Caribbean Roast $8.50
-	pork shoulder coated in *paseo marinade &amp; slow roasted 'til falling into succulent morsels
+		  	</div>	
+		  </li>
 
-	3. Chicken Breast $8.50
-	plump chicken breast dredged in *paseo marinade &amp; fire grilled to perfection.
+	</div>	
+</div>
+	
 
-	4. Smokin' Thighs $8.50
-	2 marinated, skin-on, boneless chicken thighs flash grilled &amp; oven roasted
+	
 
-	5. Sauteed Prawns $8.95
-	6 black tiger prawns sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
+	
 
-	6. Fish of the Day $8.95
-	delectable slices of fish, pan seared thoroughly w/ extra virgin olive oil &amp; garlic tapenade (optional spice 1-5 stars)
+	
 
-	7. Tofu Delight $8.50
-	where's the meat!? who cares, extra firm organic tofu cut into bite size pieces &amp; sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
+	
 
-	8. Paseo Press $8.95
-	succulent morsels of roasted pork nestled atop banana peppers draped w/ sheer slices of smoked ham, swiss cheese, caramelized onions all melted together between a hot press (no lettauce or jalapenos) 
+	
 
-	9. Ham and Cheese $7.50
-	our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered w/ caramelized onions &amp; swiss cheese, melted together on a hot press (no lettauce or jalapenos)
+	
 
-	10. Onion Obsession $6.00
-	caramelized onions sauteed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeno peppers (optional spice 1-5 stars)
+	
 
-	11. Seared Scallops $8.95
-	sizeable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro (optional spice 1-5 stars)
+	
+
+	
 
 	<div class="menu-category"><span class="food-title">The Goods</span></div>
 	12. West Caribbean Bowl $12.00
@@ -58,7 +110,7 @@
 
 
 	<div class="menu-category">
-	<span class="food-title">Entrees</span>
+		<span class="food-title">Entrees</span>
 		<span class="description"><br><em>served all day w/ the following paseo greens drizzled with our house vinaigrette &amp; extra virgin olive oil. accompied w/ jasmine rice &amp; our critically acclaimed vegetarian black beans.</em><span>
 	</div>	
 
@@ -88,8 +140,9 @@
 
 	25. Tofu Con Gusto $12.50
 	stout slices of extra firm organic tofu, sauteed in extra virgin olive oil, garlic tapenade &amp; ladled w/ our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
-
-	<h2 class="food-title">Sides</h2>
+	<div class="menu-category">
+		<span class="food-title">Sides</span>
+	</div>
 	grilled chicken breast w/ rice  $5.75
 	paseo porn loin w/ rice $5.75
 	2 chicken thighs w/ rice $5.25
