--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -80,6 +80,16 @@ footer.footer li{
   margin-left: 10px;
 }
 
+/* Menu */
+
+.list-2s  {
+  margin: 5px auto 15px auto !important;
+}
+
+.menu-row  {
+  padding-top: 10px;
+}
+
 /* Typography */
 h1 {
   font-size: 3em;
@@ -106,6 +116,7 @@ h3{
 .menu-category  {
   border-bottom: solid;
   border-bottom-width: 2px;
+  border-color: #0fe9f7;
   padding-bottom:5px;
 }
 
