--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -6,153 +6,187 @@
 		<span class="food-title">Sandwiches</span><span class="description">
 	    <br><em>All sandwiches are on a lightly toasted baguette slathered with aoli, fresh cilantro, pickled jalapenos, crisp romaine &amp; caramelized onions.</em></span>
 	</div> 
-
+	<div class="span12">
+	  <ul class="list-2s">
+	    <li>
+		  <div class="span6 menu-row">
+		  1. Grilled Pork $8.50
+		  cubed pork loin grilled over lava rocks &amp; basted w/*paseo marinade until golden brown
+		  </div>
+		  <div class="span6 menu-row">
+		  2. Caribbean Roast $8.50
+		  pork shoulder coated in *paseo marinade &amp; slow roasted 'til falling into succulent morsels
+		  </div>
+		</li>	
+		<li>
+		  <div class="span6 menu-row">
+		   3. Chicken Breast $8.50
+           plump chicken breast dredged in paseo marinade &amp; fire grilled to perfection
+		  </div>
+		  <div class="span6 menu-row">
+			4. Smokin' Thighs $8.50
+			2 marinated, skin-on, boneless chicken thighs flash grilled &amp; oven roasted
+		  </div>	
+		</li>
+		<li>
+		  <div class="span6 menu-row">
+			5. Sauteed Prawns $8.95
+			6 black tiger prawns sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
+		  </div>
+		  <div class="span6 menu-row">
+            6. Fish of the Day $8.95
+	        delectable slices of fish, pan seared thoroughly w/ extra virgin olive oil &amp; garlic tapenade (optional spice 1-5 stars)
+		  </div>	
+		</li>
+		<li>
+		  <div class="span6 menu-row">
+		  	7. Tofu Delight $8.50
+	        where's the meat!? who cares, extra firm organic tofu cut into bite size pieces &amp; sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars) 
+		  </div>
+		  <div class="span6 menu-row">
+		  	8. Paseo Press $8.95
+	        succulent morsels of roasted pork nestled atop banana peppers draped w/ sheer slices of smoked ham, swiss cheese, caramelized onions all melted together between a hot press (no lettauce or jalapenos) 
+		  </div>	
+		</li>
+		<li>
+		  <div class="span6 menu-row">
+		    9. Ham and Cheese $7.50
+	        our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered w/ caramelized onions &amp; swiss cheese, melted together on a hot press (no lettauce or jalapenos)
+		  	</div>
+		  <div class="span6 menu-row">
+            10. Onion Obsession $6.00
+	        caramelized onions sauteed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeno peppers (optional spice 1-5 stars)
+		  </div>	
+		</li>
+		<li>
+		  <div class="span6 menu-row">
+		  	11. Seared Scallops $8.95
+	        sizeable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro (optional spice 1-5 stars)
+		  </div>
+		  <div class="span6 menu-row">
+		  </div>	
+		</li>
+	</div><!--end of span12-->	
+	<div class="menu-category span12"><span class="food-title">The Goods</span></div>
+	<div class="span12">
+	  <ul class="list-2s">	
+		<li class="menu-row">
+		  <div class="span6">
+		  	12. West Caribbean Bowl $12.00
+	        dis one be the second most popular "bowl" in the caribbean mon! a generous portion of jasmine rice smothered in black beans, warm salsa, shredded cheddar cheese, sour cream, jalapenos &amp; 1 chicken thigh. served w/ love, peace, and tortilla chips
+		  </div>
+		  <div class="span6">
+		  	13. Rice Bean Thigh Trio $8.00
+	        two scoops of jasmine rice covered in black beans &amp; accompanied w/ an oven roasted thigh *extra thigh $2.00
+		  </div>	
+		</li>
+		<li class="menu-row">
+		  <div class="span6">
+		  	14. Paseo Greens $4.75
+	        crisp romaine lettauce, razor thin sliced purple cabbage, julienne pickled beets, fresh sprigs of cilantro, drizzled w/ our house vinaigrette &amp; extra virgin oil *add grilled chicken breast--$3.00 *add sauteed prawns, scallops or fish--$4.00
+	        *roasted thigh &amp; caribbean roast--$2.00
+		  </div>
+		  <div class="span6">
+		  	15. Black Beans &amp; Rice $5.50
+	        a bowl full of fluffy jasmine rice smothered in our critically acclaimed vegetarian black beans
+		  </div>	
+		</li>
+	    <li class="menu-row">
+		  <div class="span6">
+		  	16. Rice Bean Salad $8.25
+	        paseo greens served with jasmine rice &amp; a healthy portion of black beans
+		  </div>
+		  <div class="span6">
+		  </div>	
+		</li>
+	  </ul>
+	</div><!--end of span12-->	
+	<div class="menu-category span12">
+		<span class="food-title">Entrees</span>
+		<span class="description"><br><em>served all day w/ the following paseo greens drizzled with our house vinaigrette &amp; extra virgin olive oil. accompied w/ jasmine rice &amp; our critically acclaimed vegetarian black beans.</em><span>
+	</div>
 	<div class="span12">
 		<ul class="list-2s">
-		  <li>
-		    <div class="span6 menu-row">
-		    1. Grilled Pork $8.50
-			cubed pork loin grilled over lava rocks &amp; basted w/*paseo marinade until golden brown
-			</div>
-			<div class="span6 menu-row">
-			2.  Caribbean Roast $8.50
-			pork shoulder coated in *paseo marinade &amp; slow roasted 'til falling into succulent morsels
-			</div>
-		  </li>	
-		  <li>
-		  	<div class="span6 menu-row">
-		  	  3. Chicken Breast $8.50
-              plump chicken breast dredged in paseo marinade &amp; fire grilled to perfection
+			<li class="menu-row">
+		  	<div class="span6">
+		  		17. 1/2 Chicken Dinner $12.50
+					by far the best deal on the island for quality &amp; quantity. a huge 1/2 chicken encrusted w/ exotic spiced, flash grilled sealing all the juiced, finished off in the oven &amp; then by you.
 		  	</div>
-		  	<div class="span6 menu-row">
-			  4. Smokin' Thighs $8.50
-			  2 marinated, skin-on, boneless chicken thighs flash grilled &amp; oven roasted
+		  	<div class="span6">
+					18. Caribbean Roast Dinner $12.50
+					hefty morsels of succulent roasted pork shoulder dripping in *paseo parinade waiting to tantalize al 9000 of your taste buds
 		  	</div>	
 		  </li>
-		  <li>
-		  	<div class="span6 menu-row">
-			  5. Sauteed Prawns $8.95
-			  6 black tiger prawns sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
+  		<li class="menu-row">
+		  	<div class="span6">
+					19. Smokin' Thighs Dinner $12.50
+					2 bone-in juicy thighs bathed in *paseo marinade flash grilled giving 'em an enticing smokey savor then patiently roasted 'til flawless. can you hear the "thigh" of satisfaction?
 		  	</div>
-		  	<div class="span6 menu-row">
-              6. Fish of the Day $8.95
-	          delectable slices of fish, pan seared thoroughly w/ extra virgin olive oil &amp; garlic tapenade (optional spice 1-5 stars)
+		  	<div class="span6">
+					20. Grilled Chicken Breast $13.00
+					6oz of boneless, skinless, all white goodness, grilled over lava rocks with a caramelized coating of *paseo marinade embracing all its' natural juices
 		  	</div>	
 		  </li>
-		  <li>
-		  	<div class="span6 menu-row">
-		  	  7. Tofu Delight $8.50
-	          where's the meat!? who cares, extra firm organic tofu cut into bite size pieces &amp; sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars) 
+		  <li class="menu-row">
+		  	<div class="span6">
+		  		21. Paseo Pork Loin $13.00
+					cubed pork loin grilled over an open flame, brushed with *paseo marinade &amp; greatness.
 		  	</div>
-		  	<div class="span6 menu-row">
-		  	  8. Paseo Press $8.95
-	          succulent morsels of roasted pork nestled atop banana peppers draped w/ sheer slices of smoked ham, swiss cheese, caramelized onions all melted together between a hot press (no lettauce or jalapenos) 
+		  	<div class="span6">
+		  		22. Caribbean Scallops $13.00
+					savory sea scallops pan seared in extra virgin olive oil, garlic tapenade &amp; gently tossed in our reveled red sauce. Available w/ cilantro (optional spice 1-5 stars)
 		  	</div>	
 		  </li>
-		  <li>
-		  	<div class="span6 menu-row">
-		  	  9. Ham and Cheese $7.50
-	          our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered w/ caramelized onions &amp; swiss cheese, melted together on a hot press (no lettauce or jalapenos)
+		  <li class="menu-row">
+		  	<div class="span6">
+					23. Fish In Red Sauce $13.00
+					delicate slices of fish fillet sauteed in extra virgin olive oil, garlic tapenade &amp; swimming in our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
 		  	</div>
-		  	<div class="span6 menu-row">
-              10. Onion Obsession $6.00
-	          caramelized onions sauteed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeno peppers (optional spice 1-5 stars)
+		  	<div class="span6">
+					24. Paseo Prawns $13.00
+					6 peeled &amp; deveined black tiget prawns, sauteed in extra virgin olive oil, garlic tapenade &amp; simmered in our vivrant red sauce. available w/ cilantro (optional spice 1-5 stars)
 		  	</div>	
 		  </li>
-		  <li>
-		  	<div class="span6 menu-row">
-		  	  11. Seared Scallops $8.95
-	          sizeable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro (optional spice 1-5 stars)
+		  <li class="menu-row">
+		  	<div class="span6">
+					25. Tofu Con Gusto $12.50
+					stout slices of extra firm organic tofu, sauteed in extra virgin olive oil, garlic tapenade &amp; ladled w/ our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
 		  	</div>
-		  	<div class="span6 menu-row">
-
+		  	<div class="span6">
 		  	</div>	
 		  </li>
-
+	</div><!--end of span12-->	  	
+	<div class="menu-category span12">
+		<span class="food-title">Sides</span>
+	</div>
+	<div class="span12">
+		<ul class="list-2s">
+			<li class="menu-row"><div> grilled chicken breast with rice $5.75</div></li>
+		  <li class="menu-row"><div>paseo pork loin with rice $5.75</div></li>
+			<li class="menu-row"> 2 chicken thighs w/ rice $5.25</li>
+			<li class="menu-row">1/2 chicken w/ rice $5.75	
+		  </li>
+		  <li class="menu-row">caribbean roast pork w/ rice $5.50</li>
+			<li class="menu-row">your choice of prawns, scallops or fish in red sauce over rice $6.25
+		  </li>
+  		<li class="menu-row">tofu in red sauce over rice $5.75</li>
+		  <li class="menu-row">12oz black beans $4.25
+		  </li>
+		</ul>
 	</div>	
 </div>
 	
 
+
+
+
+	
+	
+	
 	
 
 	
-
 	
-
-	
-
-	
-
-	
-
-	
-
-	
-
-	
-
-	<div class="menu-category"><span class="food-title">The Goods</span></div>
-	12. West Caribbean Bowl $12.00
-	dis one be the second most popular "bowl" in the caribbean mon! a generous portion of jasmine rice smothered in black beans, warm salsa, shredded cheddar cheese, sour cream, jalapenos &amp; 1 chicken thigh. served w/ love, peace, and tortilla chips
-
-	13. Rice Bean Thigh Trio $8.00
-	two scoops of jasmine rice covered in black beans &amp; accompanied w/ an oven roasted thigh *extra thigh $2.00
-
-	14. Paseo Greens $4.75
-	crisp romaine lettauce, razor thin sliced purple cabbage, julienne pickled beets, fresh sprigs of cilantro, drizzled w/ our house vinaigrette &amp; extra virgin oil *add grilled chicken breast--$3.00 *add sauteed prawns, scallops or fish--$4.00
-	*roasted thigh &amp; caribbean roast--$2.00
-
-	15. Black Beans &amp; Rice $5.50
-	a bowl full of fluffy jasmine rice smothered in our critically acclaimed vegetarian black beans
-
-	16. Rice Bean Salad $8.25
-	paseo greens served with jasmine rice &amp; a healthy portion of black beans
-
-
-	<div class="menu-category">
-		<span class="food-title">Entrees</span>
-		<span class="description"><br><em>served all day w/ the following paseo greens drizzled with our house vinaigrette &amp; extra virgin olive oil. accompied w/ jasmine rice &amp; our critically acclaimed vegetarian black beans.</em><span>
-	</div>	
-
-	17. 1/2 Chicken Dinner $12.50
-	by far the best deal on the island for quality &amp; quantity. a huge 1/2 chicken encrusted w/ exotic spiced, flash grilled sealing all the juiced, finished off in the oven &amp; then by you.
-
-	18. Caribbean Roast Dinner $12.50
-	hefty morsels of succulent roasted pork shoulder dripping in *paseo parinade waiting to tantalize al 9000 of your taste buds
-
-	19. Smokin' Thighs Dinner $12.50
-	2 bone-in juicy thighs bathed in *paseo marinade flash grilled giving 'em an enticing smokey savor then patiently roasted 'til flawless. can you hear the "thigh" of satisfaction?
-
-	20. Grilled Chicken Breast $13.00
-	6oz of boneless, skinless, all white goodness, grilled over lava rocks with a caramelized coating of *paseo marinade embracing all its' natural juices
-
-	21. Paseo Pork Loin $13.00
-	cubed pork loin grilled over an open flame, brushed with *paseo marinade &amp; greatness.
-
-	22. Caribbean Scallops $13.00
-	savory sea scallops pan seared in extra virgin olive oil, garlic tapenade &amp; gently tossed in our reveled red sauce. Available w/ cilantro (optional spice 1-5 stars)
-
-	23. Fish In Red Sauce $13.00
-	delicate slices of fish fillet sauteed in extra virgin olive oil, garlic tapenade &amp; swimming in our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
-
-	24. Paseo Prawns $13.00
-	6 peeled &amp; deveined black tiget prawns, sauteed in extra virgin olive oil, garlic tapenade &amp; simmered in our vivrant red sauce. available w/ cilantro (optional spice 1-5 stars)
-
-	25. Tofu Con Gusto $12.50
-	stout slices of extra firm organic tofu, sauteed in extra virgin olive oil, garlic tapenade &amp; ladled w/ our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
-	<div class="menu-category">
-		<span class="food-title">Sides</span>
-	</div>
-	grilled chicken breast w/ rice  $5.75
-	paseo porn loin w/ rice $5.75
-	2 chicken thighs w/ rice $5.25
-	1/2 chicken w/ rice $5.75
-	caribbean roast pork w/ rice $5.50
-	prawns in red sauce over rice $6.25
-	scallops in red sauce over rice $6.25
-	fish in red sauce over rice $6.25
-	tofu in red sauce over rice $5.75
-	12oz black beans $4.25
 	6oz black beans $3.00
 	12oz jasmine rice $2.50
 	6oz jasmine rice $1.50
