--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -6,7 +6,7 @@
 		<span class="food-title">Sandwiches</span><span class="description">
 	    <br><em>All sandwiches are on a lightly toasted baguette slathered with aoli, fresh cilantro, pickled jalapenos, crisp romaine &amp; caramelized onions.</em></span>
 	</div> 
-	<div class="span12">
+	<div class="span12 block">
 	  <ul class="list-2s">
 	    <li>
 		  <div class="span6 menu-row">
@@ -63,12 +63,10 @@
 		  	11. Seared Scallops $8.95
 	        sizeable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro (optional spice 1-5 stars)
 		  </div>
-		  <div class="span6 menu-row">
-		  </div>	
 		</li>
 	</div><!--end of span12-->	
 	<div class="menu-category span12"><span class="food-title">The Goods</span></div>
-	<div class="span12">
+	<div class="span12 block">
 	  <ul class="list-2s">	
 		<li class="menu-row">
 		  <div class="span6">
@@ -96,8 +94,6 @@
 		  	16. Rice Bean Salad $8.25
 	        paseo greens served with jasmine rice &amp; a healthy portion of black beans
 		  </div>
-		  <div class="span6">
-		  </div>	
 		</li>
 	  </ul>
 	</div><!--end of span12-->	
@@ -105,7 +101,7 @@
 		<span class="food-title">Entrees</span>
 		<span class="description"><br><em>served all day w/ the following paseo greens drizzled with our house vinaigrette &amp; extra virgin olive oil. accompied w/ jasmine rice &amp; our critically acclaimed vegetarian black beans.</em><span>
 	</div>
-	<div class="span12">
+	<div class="span12 block">
 		<ul class="list-2s">
 			<li class="menu-row">
 		  	<div class="span6">
@@ -152,14 +148,12 @@
 					25. Tofu Con Gusto $12.50
 					stout slices of extra firm organic tofu, sauteed in extra virgin olive oil, garlic tapenade &amp; ladled w/ our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
 		  	</div>
-		  	<div class="span6">
-		  	</div>	
 		  </li>
 	</div><!--end of span12-->	  	
 	<div class="menu-category span12">
 		<span class="food-title">Sides</span>
 	</div>
-	<div class="span12">
+	<div class="span12 block">
 		<ul class="list-2s">
 			<li class="menu-row"><div> grilled chicken breast with rice $5.75</div></li>
 		  <li class="menu-row"><div>paseo pork loin with rice $5.75</div></li>
