updated menu colors and spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -116,6 +116,22 @@ footer.footer li{
   padding-top: 10px;
 }
 
+ul.list-2s {
+  li {
+    padding-bottom:0px;
+  }
+}
+
+.fdname  {
+  margin-left: 5px;
+  color: #660000;
+  font-weight: bold;
+}
+.num  {
+  color: #660000;
+  font-weight: bold;
+}
+
 
 /* Typography */
 h1 {
