--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -97,13 +97,13 @@ footer.footer li{
 }
 
 .food-title  {
-  font-size: 1.8em;
+  font-size: 2.0em;
   font-weight:bold;
   margin-right: 5px;
 }
 
 .description  {
-  font-size: 1.0em;
+  font-size: 1.2em;
   color: #660000;
 }
 
@@ -123,11 +123,13 @@ ul.list-2s {
 }
 
 .fdname  {
+  font-size: 16px;
   margin-left: 5px;
   color: #660000;
   font-weight: bold;
 }
 .num  {
+  font-size: 16px;
   color: #660000;
   font-weight: bold;
 }
